# Task_2

./: .gitignore  CMakeLists.txt  Tests.cpp  main.cpp  main.h  version.h.in
.github/workflows/: release.yml
